02-redis.yaml
# --- REDIS POUR TEAM-BLUE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: team-blue
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: team-blue
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379

# --- REDIS POUR TEAM-GREEN ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: team-green
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: team-green
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
