03-app.yaml
# --- APP POUR TEAM-BLUE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudmemo
  namespace: team-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudmemo
  template:
    metadata:
      labels:
        app: cloudmemo
    spec:
      containers:
      - name: cloudmemo
        image: franeka/cloudmemo:v1.0  # <--- VÉRIFIEZ VOTRE NOM D'IMAGE
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cloudmemo-svc
  namespace: team-blue
spec:
  type: NodePort  # Permet d'accéder à l'app via l'IP d'un noeud
  selector:
    app: cloudmemo
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001 # Port d'accès pour Blue

# --- APP POUR TEAM-GREEN ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudmemo
  namespace: team-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudmemo
  template:
    metadata:
      labels:
        app: cloudmemo
    spec:
      containers:
      - name: cloudmemo
        image: franeka/cloudmemo:v1.0  # <--- VÉRIFIEZ VOTRE NOM D'IMAGE
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cloudmemo-svc
  namespace: team-green
spec:
  type: NodePort
  selector:
    app: cloudmemo
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30002 # Port d'accès pour Green
