04-network-policies.yaml
# --- POLITIQUES POUR TEAM-BLUE ---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: team-blue
spec:
  podSelector: {} # S'applique à TOUS les pods du namespace
  ingress:
  - from:
    - podSelector: {} # Autorise seulement les pods du MÊME namespace
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-redis
  namespace: team-blue
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cloudmemo
    ports:
    - protocol: TCP
      port: 6379

# --- POLITIQUES POUR TEAM-GREEN ---
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: team-green
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-redis
  namespace: team-green
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cloudmemo
    ports:
    - protocol: TCP
      port: 6379
